# vincentys-formula

./: .gitignore  CMakeLists.txt  README.md  main.c  vinc.cpp  vinc_c_vs_python.py
src/: main.c  vinc.c  vinc.cpp
src/ext/: vinc.h  vinc.hpp
src/tests/: test_vinc.cpp
